`/tracker clear`